--- a/src/resources/editplaylist.fxml
+++ b/src/resources/editplaylist.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@userstyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.client.controllers.EditPlaylistController">
     <children>
@@ -13,23 +15,27 @@
             </font>
         </Label>
         <TextField fx:id="tbName" layoutX="11.0" layoutY="27.0" styleClass="textbox" stylesheets="@userstyle.css" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0" />
-      <Label layoutX="10.0" layoutY="10.0" text="Description" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="60.0">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <TextField fx:id="tbDescription" layoutX="21.0" layoutY="37.0" styleClass="textbox" stylesheets="@userstyle.css" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="80.0" />
-              <Button mnemonicParsing="false" onAction="#addSong" stylesheets="@userstyle.css" text="Add song" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="115.0" />
-        <HBox prefHeight="597.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="140.0">
+        <Label layoutX="10.0" layoutY="10.0" text="Description" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="60.0">
+            <font>
+                <Font size="14.0" />
+            </font>
+        </Label>
+        <TextField fx:id="tbDescription" layoutX="21.0" layoutY="37.0" styleClass="textbox" stylesheets="@userstyle.css" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="80.0" />
+        <Button mnemonicParsing="false" onAction="#addSong" stylesheets="@userstyle.css" text="Add song" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="115.0" />
+        <HBox prefHeight="600.0" prefWidth="600.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="150.0">
             <children>
-            <ScrollPane prefViewportHeight="580.0" prefViewportWidth="600.0">
-               <content>
-                      <VBox fx:id="songContainer" HBox.hgrow="ALWAYS" />
-               </content>
-            </ScrollPane>
+                <ScrollPane fitToWidth="true" prefViewportHeight="580.0" prefViewportWidth="600.0" HBox.hgrow="ALWAYS">
+                    <content>
+                        <VBox fx:id="songContainer" HBox.hgrow="ALWAYS">
+                            <HBox.margin>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                            </HBox.margin>
+                        </VBox>
+                    </content>
+                </ScrollPane>
             </children>
         </HBox>
         <Button mnemonicParsing="false" onAction="#savePlaylist" stylesheets="@userstyle.css" text="Save" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="20.0" />
-      <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#backToMenu" stylesheets="@userstyle.css" text="Back" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="10.0" />
+        <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#backToMenu" stylesheets="@userstyle.css" text="Back" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="10.0" />
     </children>
 </AnchorPane>
