--- a/src/resources/playlistview.fxml
+++ b/src/resources/playlistview.fxml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="600.0" stylesheets="@userstyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.client.controllers.PlaylistViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" stylesheets="@userstyle.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.client.controllers.PlaylistViewController">
     <children>
         <Label id="title" fx:id="playlistName" stylesheets="@userstyle.css" text="Playlist name" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
         <HBox prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="70.0">
@@ -44,59 +47,6 @@
                 </AnchorPane>
             </children>
         </HBox>
-        <AnchorPane id="bottombar" stylesheets="userstyle.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-            <children>
-                <VBox AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                    <children>
-                        <HBox>
-                            <children>
-                                <Label fx:id="currentSongInfo">
-                                    <HBox.margin>
-                                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                    </HBox.margin>
-                                    <font>
-                                        <Font size="16.0" />
-                                    </font>
-                                </Label>
-                            </children>
-                            <VBox.margin>
-                                <Insets left="10.0" right="10.0" />
-                            </VBox.margin>
-                        </HBox>
-                        <HBox alignment="CENTER" VBox.vgrow="ALWAYS">
-                            <children>
-                                <Button alignment="CENTER" layoutX="366.0" layoutY="20.0" mnemonicParsing="false" onAction="#toggleShuffle" styleClass="barbutton" stylesheets="@userstyle.css" text="Shuffle">
-                                    <HBox.margin>
-                                        <Insets />
-                                    </HBox.margin>
-                                </Button>
-                                <Button alignment="CENTER" layoutX="320.0" layoutY="20.0" mnemonicParsing="false" onAction="#previousSong" styleClass="barbutton" stylesheets="@userstyle.css" text="◀">
-                                    <HBox.margin>
-                                        <Insets left="10.0" />
-                                    </HBox.margin>
-                                </Button>
-                                <Button alignment="CENTER" mnemonicParsing="false" onAction="#currentSongPlayPause" styleClass="barbutton" stylesheets="@userstyle.css" text="⏸">
-                                    <HBox.margin>
-                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                    </HBox.margin>
-                                </Button>
-                                <Button alignment="CENTER" layoutX="288.0" layoutY="20.0" mnemonicParsing="false" onAction="#nextSong" styleClass="barbutton" stylesheets="@userstyle.css" text="▶">
-                                    <HBox.margin>
-                                        <Insets right="10.0" />
-                                    </HBox.margin>
-                                </Button>
-                                <Button alignment="CENTER" layoutX="234.0" layoutY="20.0" mnemonicParsing="false" onAction="#toggleLoop" styleClass="barbutton" stylesheets="@userstyle.css" text="Loop">
-                                    <HBox.margin>
-                                        <Insets />
-                                    </HBox.margin>
-                                </Button>
-                            </children>
-                        </HBox>
-                    </children>
-                </VBox>
-                <ProgressBar fx:id="songTimeProgress" progress="0.0" styleClass="progressbar" stylesheets="@userstyle.css" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" />
-            </children>
-        </AnchorPane>
         <Button mnemonicParsing="false" onAction="#toMenu" text="Back" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
         <Button fx:id="btnFollow" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#toggleFollow" text="Follow" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="10.0" />
     </children>
